# g0at

./: .gitignore  LICENSE.txt  README.md  build.sh  build_mingw.cmd  build_release_mingw.cmd  create_test.cmd  idea.goat
src/: CMakeLists.txt  Doxyfile  functional_testing.c  main.c  main.cpp  unit_testing.c  unit_testing.cpp
src/analysis/: abstract_state.c  abstract_state.h  analysis.c  analysis.h  interpreter.c  interpreter.h  lattice.c  lattice.h
src/cli/: launcher.c  launcher.h  options.c  options.h
src/codegen/: code_builder.c  code_builder.h  data_builder.c  data_builder.h  linker.c  linker.h  source_builder.c  source_builder.h
src/common/: compilation_error.c  compilation_error.h  position.c  position.h  types.h
src/graph/: addition.c  assignable_expression.h  assignment.c  assignment.h  binary_operation.c  binary_operation.h  boolean_nodes.c  common_methods.c  common_methods.h  data_type.h  declarations.c  declarations.h  division.c  expression.h  function_call.c  function_object.c  if_else.c  integer.c  less.c  modulo.c  multiplication.c  node.h  node_type.h  null.c  parenthesized_expression.c  power.c  real.c  relation_type.h  return.c  root_node.c  scope.c  scope.h  simple_assignment.c  statement.h  statement_expression.c  statement_list.c  statement_sequence.c  statement_sequence.h  static_string.c  subtraction.c  (+4 more)
src/launcher/: launcher.cpp  launcher.h
src/lib/: allocate.c  allocate.h  arena.c  arena.h  avl_tree.c  avl_tree.h  format_string.cpp  format_string.h  functional.h  io.c  io.cpp  io.h  linked_list.c  linked_list.h  pair.c  pair.h  path.c  path.h  queue.c  queue.h  spinlock.h  split64.h  string_ext.c  string_ext.h  utf8_encoder.cpp  utf8_encoder.h  value.h  vector.c  vector.h
src/model/: boolean.c  built_in_functions.cpp  built_in_functions.h  code.cpp  code.h  common_methods.c  common_methods.h  common_types.h  context.c  context.h  data_description.cpp  data_description.h  dynamic_object.cpp  dynamic_object.h  empty_object.cpp  exceptions.cpp  exceptions.h  expressions.cpp  expressions.h  flags.h  function.c  functions.cpp  functions.h  generic_object.cpp  generic_object.h  integer.c  model_status.h  null.c  null_object.cpp  number.c  numbers.cpp  numbers.h  object.cpp  (+35 more)
(+170 files in other folders)
